manifests/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts: 
      - keycloak.apps.janus-idp.w6gk.p1.openshiftapps.com
      secretName: keycloak-cert
  rules:
    - host: keycloak.apps.janus-idp.w6gk.p1.openshiftapps.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
